--- a/Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html
+++ b/Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html
@@ -73,16 +73,22 @@
                                     <a href="services.html" class="text-hover-animaiton">Services</a>
                                     <ul>
                                         <li>
-                                            <a href="./Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html" class="text-hover-animaiton">Ventes de pneumatique & lubrifiants moteur</a>
+                                            <a href="./Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html"
+                                                class="text-hover-animaiton">Ventes de pneumatique & lubrifiants
+                                                moteur</a>
                                         </li>
                                         <li>
-                                            <a href="./Atelier-de-reparation-voitures-et-poids-lourds.html" class="text-hover-animaiton">Ateliers de réparation des voitures & poids lourd</a>
+                                            <a href="./Atelier-de-reparation-voitures-et-poids-lourds.html"
+                                                class="text-hover-animaiton">Ateliers de réparation des voitures & poids
+                                                lourd</a>
                                         </li>
                                         <li>
-                                            <a href="./Atelier-mobile-pour-voiture.html" class="text-hover-animaiton">Ateliers mobile pour voitures</a>
+                                            <a href="./Atelier-mobile-pour-voiture.html"
+                                                class="text-hover-animaiton">Ateliers mobile pour voitures</a>
                                         </li>
                                         <li>
-                                            <a href="./Atelier-mobile-pour-poid-lourd.html" class="text-hover-animaiton">Ateliers mobile pour poids lourd</a>
+                                            <a href="./Atelier-mobile-pour-poid-lourd.html"
+                                                class="text-hover-animaiton">Ateliers mobile pour poids lourd</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -148,24 +154,43 @@
                         disponibilité. Depuis plus de 20 ans, nous importons et distribuons des pneus de marques
                         internationales de renom, couvrant l’ensemble des besoins du marché : véhicules particuliers
                         (PCR), utilitaires légers (LTR), poids lourds (TBR), engins de chantier et véhicules
-                        tout-terrain (OTR).
+                        tout-terrain (OTR).<br>
                         Notre infrastructure logistique de pointe, avec plus de 15 000 m² d’espace de stockage et une
                         capacité de 150 000 pneus en stock, nous permet de répondre avec réactivité aux demandes de nos
                         clients, qu’elles soient ponctuelles ou régulières. Cette force logistique est un pilier
-                        essentiel de notre fiabilité sur le marché.
+                        essentiel de notre fiabilité sur le marché.<br>
                         Nous disposons également d’un réseau de distribution étendu à l’échelle nationale, appuyé par
                         une force de vente B2B et B2C structurée et spécialisée, opérant dans les principales régions du
                         Royaume : Casablanca, Rabat-Salé-Kénitra, Fès-Meknès, Agadir et Tanger-Tétouan. Grâce à un
                         portefeuille de plus de 2 500 clients professionnels, nous sommes en mesure d’intervenir avec
                         proximité et efficacité auprès de différents secteurs : transport, logistique, BTP, concessions,
-                        flotte d’entreprise et centres de services auto.
+                        flotte d’entreprise et centres de services auto.<br>
                         Notre objectif est simple : fournir à chaque client le bon pneu, au bon moment, avec le bon
                         accompagnement. Au-delà de la simple distribution, nous offrons un service personnalisé, avec
                         des conseils techniques, un suivi commercial réactif et une vraie capacité à anticiper les
-                        besoins du marché.
-                        En choisissant Energy Tires, vous faites le choix d’un partenaire de confiance, reconnu pour son
-                        professionnalisme, sa réactivité et sa connaissance approfondie du secteur pneumatique au Maroc
-                        et en Afrique.
+                        besoins du marché.<br>
+                        Grâce à des partenariats solides avec des marques internationales, nous fournissons au marché marocain des
+                        produits adaptés aux exigences locales, que ce soit pour les véhicules particuliers, industriels
+                        ou les flottes professionnelles.<br>
+                        Nous sommes distributeur officiel au Maroc des marques suivantes :
+                        <p><strong>- Firestone </strong>: Marque emblématique d’origine américaine, connue pour ses pneumatiques fiables,
+                        performants et durables, aussi bien en segment tourisme que poids lourd.</p>
+
+                    <p><strong>- Triangle </strong>: Leader chinois dans la production de pneus, offrant un excellent rapport
+                        qualité/prix. Une gamme complète pour le tourisme, le poids lourd et les applications spéciales.</p>
+
+                    <p><strong>- Accord Lubrifiants (Made in France) </strong>: Huiles moteur et lubrifiants techniques hautement
+                        performants, conformes aux standards européens, pour véhicules légers et industriels.</p>
+
+                    <p><strong>- Volus (Made in Greece)</strong> : Spécialiste de l’AdBlue et des fluides techniques conformes aux normes
+                        environnementales européennes, essentiels pour les véhicules diesel récents.</p><br>
+
+
+
+                        Grâce à notre réseau de distribution national, nos produits sont disponibles dans toutes les
+                        régions du Maroc, avec un accompagnement technique et commercial personnalisé. Notre mission est
+                        de garantir qualité, disponibilité et satisfaction client, en apportant des solutions sur mesure
+                        aux professionnels de l’automobile.
 
 
                     </p>
@@ -249,12 +274,19 @@
                 </div>
                 <div class="ak-height-50 ak-height-lg-50"></div>
                 <div class="single-blog-list" data-aos="fade-up">
-                    <h4 class="single-blog-title">Matrax Lubricants : L’innovation européenne au service de la performance moteur</h4>
+                    <h4 class="single-blog-title">Matrax Lubricants : L’innovation européenne au service de la
+                        performance moteur</h4>
                     <div class="d-flex gap-3 flex-nowrap flex-md-wrap justify-content-center">
                         <img src="../assets/img/Exclusivite/matraxtires.svg" class="img-fluid" alt="...">
                     </div>
                     <p class="single-blog-desp">
-                        Matrax Lubricants, distribuée par Energy Tires & Services au Maroc, est une marque de lubrifiants haut de gamme, reconnue pour sa capacité à innover et à produire des solutions adaptées à divers secteurs, notamment l’automobile et l’industrie. Grâce à ses laboratoires de pointe, Matrax développe des produits certifiés par de grands constructeurs européens, américains et asiatiques, garantissant ainsi une performance optimale. La marque propose une gamme variée de conditionnements, des bidons de 1L et 5L pour les particuliers aux formats professionnels allant jusqu’à 1000L, répondant ainsi aux besoins de chaque client.
+                        Matrax Lubricants, distribuée par Energy Tires & Services au Maroc, est une marque de
+                        lubrifiants haut de gamme, reconnue pour sa capacité à innover et à produire des solutions
+                        adaptées à divers secteurs, notamment l’automobile et l’industrie. Grâce à ses laboratoires de
+                        pointe, Matrax développe des produits certifiés par de grands constructeurs européens,
+                        américains et asiatiques, garantissant ainsi une performance optimale. La marque propose une
+                        gamme variée de conditionnements, des bidons de 1L et 5L pour les particuliers aux formats
+                        professionnels allant jusqu’à 1000L, répondant ainsi aux besoins de chaque client.
                     </p>
 
                     <div class="ak-height-50 ak-height-lg-50"></div>
@@ -265,9 +297,17 @@
                     <div class="d-flex gap-3 flex-nowrap flex-md-wrap justify-content-center">
                     </div>
                     <p class="single-blog-desp">
-                        Développé par Energy Tires & Services, Energy Oil est un lubrifiant révolutionnaire conçu pour offrir une protection supérieure aux moteurs lourds, tels que ceux des camions, engins de construction, bus, et autres véhicules tout-terrain. 100 % synthétique, il utilise des technologies de pointe pour garantir une protection exceptionnelle contre l’usure, prolongeant ainsi la durée de vie des moteurs et réduisant les coûts de maintenance.<br>
+                        Développé par Energy Tires & Services, Energy Oil est un lubrifiant révolutionnaire conçu pour
+                        offrir une protection supérieure aux moteurs lourds, tels que ceux des camions, engins de
+                        construction, bus, et autres véhicules tout-terrain. 100 % synthétique, il utilise des
+                        technologies de pointe pour garantir une protection exceptionnelle contre l’usure, prolongeant
+                        ainsi la durée de vie des moteurs et réduisant les coûts de maintenance.<br>
 
-                        Spécialement formulé pour résister aux conditions extrêmes et aux températures élevées, Energy Oil optimise la performance du moteur tout en réduisant la consommation de carburant grâce à une meilleure lubrification des pièces moteur. Sa résistance à l'oxydation et son additif anti-usure avancé en font un choix idéal pour les flottes de véhicules lourds, tout en respectant les normes industrielles les plus strictes. </p>
+                        Spécialement formulé pour résister aux conditions extrêmes et aux températures élevées, Energy
+                        Oil optimise la performance du moteur tout en réduisant la consommation de carburant grâce à une
+                        meilleure lubrification des pièces moteur. Sa résistance à l'oxydation et son additif anti-usure
+                        avancé en font un choix idéal pour les flottes de véhicules lourds, tout en respectant les
+                        normes industrielles les plus strictes. </p>
 
                     <div class="ak-height-50 ak-height-lg-50"></div>
                 </div>
@@ -277,9 +317,17 @@
                     <div class="d-flex gap-3 flex-nowrap flex-md-wrap justify-content-center">
                     </div>
                     <p class="single-blog-desp">
-                        AdBlue est une solution de haute pureté spécialement conçue pour les moteurs diesel équipés de la technologie réduction catalytique sélective (SCR), permettant de répondre aux normes d'émissions Euro 4, Euro 5 et Euro 6. Introduite en 2005, cette technologie permet de transformer les oxydes d'azote en vapeur d'eau et en azote inoffensif, contribuant ainsi à réduire les émissions polluantes des véhicules lourds.<br>
+                        AdBlue est une solution de haute pureté spécialement conçue pour les moteurs diesel équipés de
+                        la technologie réduction catalytique sélective (SCR), permettant de répondre aux normes
+                        d'émissions Euro 4, Euro 5 et Euro 6. Introduite en 2005, cette technologie permet de
+                        transformer les oxydes d'azote en vapeur d'eau et en azote inoffensif, contribuant ainsi à
+                        réduire les émissions polluantes des véhicules lourds.<br>
 
-Composée principalement d'eau déminéralisée et d'urée, AdBlue est injectée dans les gaz d'échappement, permettant de réduire considérablement les émissions de NOx et de respecter les exigences environnementales tout en diminuant l'impact écologique des moteurs diesel. Cette solution est un outil indispensable pour les véhicules soumis aux normes européennes anti-pollution.
+                        Composée principalement d'eau déminéralisée et d'urée, AdBlue est injectée dans les gaz
+                        d'échappement, permettant de réduire considérablement les émissions de NOx et de respecter les
+                        exigences environnementales tout en diminuant l'impact écologique des moteurs diesel. Cette
+                        solution est un outil indispensable pour les véhicules soumis aux normes européennes
+                        anti-pollution.
                     </p>
 
                     <div class="ak-height-50 ak-height-lg-50"></div>
