--- a/about.html
+++ b/about.html
@@ -182,9 +182,9 @@
     <div class="container">
         <div class="company-tab">
             <ul class="tabs">
-                <li class="active-tab">Mission</li>
-                <li>Vision</li>
-                <li>History</li>
+                <li class="active-tab">Notre Mission</li>
+                <li>Nore Objectif</li>
+                <li>Notre Histoire</li>
             </ul>
 
             <div class="tabs-content">
@@ -198,10 +198,9 @@
                 </div>
                 <div class="list">
                     <div class="ak-section-heading ak-style-1 ak-type-1">
-                        <div class="background-text">Notre Vision</div>
-                        <h3 class="desp"> Fondé sur des valeurs fortes telles que l’innovation, la qualité et la
-                            satisfaction client, Energy Tires s’engage à fournir des produits et services haut de gamme
-                            pour répondre à tous les besoins en matière de mobilité.
+                        <div class="background-text">Notre Objectif</div>
+                        <h3 class="desp"> Réduire vos charges, prolonger la durée de vie de vos pneus, et maximiser votre rendement.<br>
+                            Nous mettons tout en œuvre pour offrir à nos clients une relation gagnant-gagnant, en alignement avec nos partenaires fournisseurs, pour bâtir un business durable et performant.                            
                         </h3>
                     </div>
                 </div>
@@ -312,6 +311,39 @@
                 </div>
             </div>
         </div>
+        <div class="ak-height-125 ak-height-lg-80"></div>
+        <div class="ak-slider ak-trusted-client-slider">
+            <h4 class="title">Distribution Officiel De</h4>
+            <div class="swiper-wrapper">
+                
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/Exclusivite/ACCOR.png" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/Exclusivite/firestone_red_logo.png" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/Exclusivite/matraxtires.svg" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/Exclusivite/triangle.png" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/Exclusivite/voulis.png" alt="">
+                    </div>
+                </div>
+               
+            </div>
+        </div>
     </section>
     <!-- End Why Choose Us -->
 
@@ -411,7 +443,64 @@
         </div>
     </section>
     <!-- Snd Gallery -->
-
+    <div class="ak-height-125 ak-height-lg-80"></div>
+    <div class="container">
+        <div class="ak-slider ak-trusted-client-slider">
+            <h4 class="title">Nos Marques</h4>
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/CLIENT/Michelin.png" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/CLIENT/Bridgestone.jpeg" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/CLIENT/apollo-tyres.png" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/CLIENT/yokohama.webp" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/CLIENT/continental.svg" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/CLIENT/sailun.jpg" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/CLIENT/hankook.svg" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/CLIENT/goodyear.png" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/CLIENT/matador.jpg" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/CLIENT/DOubleStar.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Start Footer -->
     <div class="ak-height-125 ak-height-lg-80"></div>
