--- a/index.html
+++ b/index.html
@@ -366,72 +366,30 @@
     <!-- End Hero -->
 
     <!-- Start Service Progress -->
-    <div class="ak-height-125 ak-height-lg-80"></div>
-    <!-- <section class="container">
-        <div class="row  row-cols-1 row-cols-xl-3 g-4 ">
-            <div class="service-progress-card" data-aos="fade-up">
-                <div class="progress-item">
-                    <h4 class="ak-stroke-number color-white">01</h4>
-                    <div class="ak-border-width"></div>
+     <!-- Start DIRECTOR WORD -->
+     <div class="ak-height-125 ak-height-lg-80"></div>
+     <section class="container">
+         <div class="choose-us-container-extents">
+             <div class="choose-us-contain">
+                 <div class="choose-us-info" data-aos="fade-up">
+                     <div class="ak-section-heading ak-style-1">
+                        <h4 class="ak-section-title">Un petit mot de notre PDG</h4>
+                         <h4 class="desp"><strong>“Leader national dans l’importation et la distribution de pneumatiques et lubrifiants,
+
+                            Energy Tire place l’humain, l’innovation et la performance au cœur de chaque partenariat.”</strong></h4>
+                     </div>
+                     <div class="ak-height-60 ak-height-lg-30"></div>
+                     <div class="stroke-heading-text">
+                         <h5 class="ak-stroke-text hover-color-changes text-right">Tarik, Vision & Engagement</h5>
+                     </div>
+                 </div>
+                 <div class="choose-us-img" data-aos="fade-up" data-aos-delay="150">
+                    <img src="assets/img/Management/pdg.jpeg" alt="..." style="border-radius: 295px;">
                 </div>
-                <div class="service-item">
-                    <div class="heartbeat-icon">
-                        <a href="">
-                            <span class="ak-heartbeat-btn"><img src="assets/img/speedome.svg" alt="..."></span>
-                        </a>
-                    </div>
-                    <div class="service-info">
-                        <h4 class="title">PERFOMANCE CHECK</h4>
-                        <p class="desp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                            Ipsum has been
-                            the
-                            industry's stan.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="service-progress-card" data-aos="fade-up" data-aos-delay="100">
-                <div class="progress-item">
-                    <h4 class="ak-stroke-number color-white">02</h4>
-                    <div class="ak-border-width"></div>
-                </div>
-                <div class="service-item">
-                    <div class="heartbeat-icon">
-                        <a href="">
-                            <span class="ak-heartbeat-btn"><img src="assets/img/car-repair.svg" alt="..."></span>
-                        </a>
-                    </div>
-                    <div class="service-info">
-                        <h4 class="title">AUTO REPAIR</h4>
-                        <p class="desp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                            Ipsum has been
-                            the
-                            industry's stan.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="service-progress-card" data-aos="fade-up" data-aos-delay="150">
-                <div class="progress-item">
-                    <h4 class="ak-stroke-number color-white">03</h4>
-                    <div class="ak-border-width"></div>
-                </div>
-                <div class="service-item">
-                    <div class="heartbeat-icon">
-                        <a href="">
-                            <span class="ak-heartbeat-btn"><img src="assets/img/car.svg" alt="..."></span>
-                        </a>
-                    </div>
-                    <div class="service-info">
-                        <h4 class="title">FLEET SERVICES</h4>
-                        <p class="desp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                            Ipsum has been
-                            the
-                            industry's stan.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- End Service Progress -->
+             </div>
+         </div>
+     </section>
+     <!-- End DIRECTOR WORD -->
 
 
     <!-- Start Why Choose Us -->
