--- a/services.html
+++ b/services.html
@@ -132,7 +132,47 @@
     <!-- Start Services -->
     <div class="ak-height-75 ak-height-lg-80"></div>
     <div class="d-flex justify-content-center">
-        <div class="sticky-content container">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="services-content" style="max-width: 100% !important;">
+                        <div class="ak-section-heading ak-style-1">
+                            <div class="background-text" data-aos="fade-right" data-aos-duration="1000">Services</div>
+                            <h2 class="ak-section-title">Nos<br> Services</h2>
+                            <p class="ak-section-subtitle" style="max-width: 100% !important;">Chez Energy Tire, nous avons bâti notre expertise autour de la sélection, l’importation et la distribution de produits reconnus pour leur qualité, performance et fiabilité. Grâce à des partenariats solides avec des marques internationales, nous fournissons au marché marocain des produits adaptés aux exigences locales, que ce soit pour les véhicules particuliers, industriels ou les flottes professionnelles.<br>
+                                Grâce à notre réseau de distribution national, nos produits sont disponibles dans toutes les régions du Maroc, avec un accompagnement technique et commercial personnalisé. Notre mission est de garantir qualité, disponibilité et satisfaction client, en apportant des solutions sur mesure aux professionnels de l’automobile.<br>
+                                En plus de la distribution de pneumatiques et lubrifiants, Energy Tire propose une gamme complète de services de réparation, de maintenance et de montage pour tous types de véhicules : voitures particulières, poids lourds et engins de chantier (génie civil).
+                                Nous disposons d’un réseau d’ateliers fixes et mobiles pour offrir des prestations rapides, professionnelles et adaptées aux besoins de nos clients, particuliers comme professionnels.</p>
+                                <div class="ak-height-60 ak-height-lg-60"></div>
+                                <h4>Nos infrastructures :</h4>
+                                <ul>
+                                    <li>Points de service dans les principales villes du Royaume :Casablanca, Rabat, Meknès, Fès, Tanger, Marrakech, Agadir, etc.</li>
+                                    <li>Ateliers mobiles équipés pour les interventions sur site (poids lourds, chantiers, flottes).</li>
+                                    <li>Partenaires agréés à travers le pays pour une couverture nationale optimale.</li>
+                                </ul>
+                                <div class="ak-height-40 ak-height-lg-40"></div>
+                                <h4>Nos services :</h4>
+                                <ul>
+                                    <li>Montage & équilibrage de pneus toutes dimensions</li>
+                                    <li>Entretien rapide (vidange, freins, amortisseurs, etc.)</li>
+                                    <li>Réparation toutes marques</li>
+                                    <li>Interventions sur véhicules poids lourds & engins de chantier</li>
+                                    <li>Accompagnement B2B personnalisé</li>
+                                </ul>
+                                <div class="ak-height-40 ak-height-lg-40"></div>
+                                <h4>Suivi & optimisation pour les flottes professionnelles :</h4>
+                                <ul>
+                                    <li>Suivi technique des pneus (usure, pression, rotation)</li>
+                                    <li>Suivi de rendement pour chaque véhicule ou type de mission</li>
+                                    <li>Rapports d’analyse réguliers pour conseiller nos clients sur les meilleures pratiques d’utilisation</li>
+                                    <li>Recommandations sur le choix de pneus adapté au besoin réel (terrain, charge, distance)</li>
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="sticky-content container d-none">
             <div class="content style_2">
                 <div class="service">
                     <div class="service-card" data-aos="fade-left">
@@ -194,11 +234,13 @@
                     <div class="ak-section-heading ak-style-1">
                         <div class="background-text" data-aos="fade-right" data-aos-duration="1000">Services</div>
                         <h2 class="ak-section-title">Nos<br> Services</h2>
-                        <p class="ak-section-subtitle">Chez Energy Tires, nous mettons un point d'honneur à accompagner nos clients avec une offre de services complète, pensée pour répondre efficacement à l'ensemble de leurs besoins en matière de mobilité. Qu'il s'agisse de l'acquisition de pneus ou de lubrifiants moteurs, de prestations techniques, de maintenance ou de conseils spécialisés, notre objectif est de proposer des solutions sur mesure, fiables et durables.
+                        <p class="ak-section-subtitle">Chez Energy Tire, nous avons bâti notre expertise autour de la sélection, l’importation et la distribution de produits reconnus pour leur qualité, performance et fiabilité. Grâce à des partenariats solides avec des marques internationales, nous fournissons au marché marocain des produits adaptés aux exigences locales, que ce soit pour les véhicules particuliers, industriels ou les flottes professionnelles.<br>
+                            Grâce à notre réseau de distribution national, nos produits sont disponibles dans toutes les régions du Maroc, avec un accompagnement technique et commercial personnalisé. Notre mission est de garantir qualité, disponibilité et satisfaction client, en apportant des solutions sur mesure aux professionnels de l’automobile.<br>
+                            En plus de la distribution de pneumatiques et lubrifiants, Energy Tire propose une gamme complète de services de réparation, de maintenance et de montage pour tous types de véhicules : voitures particulières, poids lourds et engins de chantier (génie civil).
 
-                            Notre expertise, alliée à une écoute attentive de nos partenaires, nous permet d’adapter nos services aux spécificités de chaque secteur, qu’il s’agisse de véhicules légers, de poids lourds ou d’équipements industriels. Nous veillons à garantir la qualité, la performance et la réactivité dans chacune de nos interventions.
-                            
-                            Avec Energy Tires, vous bénéficiez d’un accompagnement global, centré sur la satisfaction client et la performance de vos activités, aujourd’hui et pour demain.</p>
+ 
+
+                            Nous disposons d’un réseau d’ateliers fixes et mobiles pour offrir des prestations rapides, professionnelles et adaptées aux besoins de nos clients, particuliers comme professionnels.</p>
                     </div>
                 </div>
             </div>
