--- a/Services/Atelier-de-reparation-voitures-et-poids-lourds.html
+++ b/Services/Atelier-de-reparation-voitures-et-poids-lourds.html
@@ -70,7 +70,7 @@
                                     <a href="../about.html" class="text-hover-animaiton">A propos</a>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="services.html" class="text-hover-animaiton">Services</a>
+                                    <a href="../services.html" class="text-hover-animaiton">Services</a>
                                     <ul>
                                         <li>
                                             <a href="./Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html"
