--- a/Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html
+++ b/Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html
@@ -70,7 +70,7 @@
                                     <a href="../about.html" class="text-hover-animaiton">A propos</a>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="services.html" class="text-hover-animaiton">Services</a>
+                                    <a href="../services.html" class="text-hover-animaiton">Services</a>
                                     <ul>
                                         <li>
                                             <a href="./Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html"
@@ -239,7 +239,19 @@
                         pleinement dans notre vision : offrir à nos clients des pneus fiables, innovants et accessibles,
                         tout en consolidant notre position de leader sur le marché.
                     </p>
-                    <img src="../assets/img/Magasin/meknes 1.jpg" data-aos="fade-up" class="img-fluid" alt="...">
+                    <img src="../assets/img/Magasin/triangle_banner.png" data-aos="fade-up" class="img-fluid" alt="...">
+                    <div class="ak-height-50 ak-height-lg-50"></div>
+                </div>
+                <div class="ak-height-50 ak-height-lg-50"></div>
+                <div class="single-blog-list" data-aos="fade-up">
+                    <h4 class="single-blog-title">Matrax Tires : Performance et Sécurité à Votre Portée</h4>
+                    <div class="d-flex gap-3 flex-nowrap flex-md-wrap justify-content-center">
+                        <img src="../assets/img/Exclusivite/matraxtires.svg" class="img-fluid" alt="...">
+                    </div>
+                    <p class="single-blog-desp">
+                        En tant que distributeur officiel de la marque Matrax Tires au Maroc, Energy Tires & Services est fier de proposer à ses clients une gamme de pneus innovants, fiables et adaptés à toutes les conditions de conduite. Conçus avec une technologie de pointe et testés rigoureusement, les pneus Matrax offrent une excellente adhérence, une durabilité remarquable et un confort de conduite supérieur. Que ce soit pour les véhicules de tourisme, utilitaires ou SUV, Matrax s’impose comme une solution performante et accessible. Grâce à ce partenariat stratégique, nous mettons à la disposition de notre réseau national un produit qui allie qualité internationale et prix compétitifs, tout en garantissant un service après-vente professionnel et de proximité.
+                    </p>
+                    <img src="../assets/img/Magasin/IMG_5682.JPG" data-aos="fade-up" class="img-fluid" alt="...">
                     <div class="ak-height-50 ak-height-lg-50"></div>
                 </div>
                 <div class="single-blog-list" data-aos="fade-up">
@@ -272,25 +284,7 @@
                         de la mobilité au Maroc et en Afrique.<br>
                     </p>
                 </div>
-                <div class="ak-height-50 ak-height-lg-50"></div>
-                <div class="single-blog-list" data-aos="fade-up">
-                    <h4 class="single-blog-title">Matrax Lubricants : L’innovation européenne au service de la
-                        performance moteur</h4>
-                    <div class="d-flex gap-3 flex-nowrap flex-md-wrap justify-content-center">
-                        <img src="../assets/img/Exclusivite/matraxtires.svg" class="img-fluid" alt="...">
-                    </div>
-                    <p class="single-blog-desp">
-                        Matrax Lubricants, distribuée par Energy Tires & Services au Maroc, est une marque de
-                        lubrifiants haut de gamme, reconnue pour sa capacité à innover et à produire des solutions
-                        adaptées à divers secteurs, notamment l’automobile et l’industrie. Grâce à ses laboratoires de
-                        pointe, Matrax développe des produits certifiés par de grands constructeurs européens,
-                        américains et asiatiques, garantissant ainsi une performance optimale. La marque propose une
-                        gamme variée de conditionnements, des bidons de 1L et 5L pour les particuliers aux formats
-                        professionnels allant jusqu’à 1000L, répondant ainsi aux besoins de chaque client.
-                    </p>
-
-                    <div class="ak-height-50 ak-height-lg-50"></div>
-                </div>
+               
                 <div class="ak-height-50 ak-height-lg-50"></div>
                 <div class="single-blog-list" data-aos="fade-up">
                     <h4 class="single-blog-title">Energy Oil : Protection optimale pour vos moteurs lourds</h4>
