--- a/services.html
+++ b/services.html
@@ -114,7 +114,7 @@
 </header>
 <!-- End Header Section -->
 
-<div data-src="assets/img/team_single_page_slider_3.jpg" class="ak-bg">
+<div data-src="assets/img/services.jpg" class="ak-bg">
     <div class="ak-height-100 ak-height-lg-100"></div>
     <div class="ak-height-125 ak-height-lg-40"></div>
     <div class="container">
