--- a/index.html
+++ b/index.html
@@ -253,9 +253,9 @@
                          <h5 class="ak-stroke-text hover-color-changes text-right">Tarik, Vision & Engagement</h5>
                      </div>
                  </div>
-                 <div class="choose-us-img mt-2" data-aos="fade-up" data-aos-delay="150">
+                 <!-- <div class="choose-us-img mt-2" data-aos="fade-up" data-aos-delay="150">
                     <img src="assets/img/Management/pdg.jpeg" alt="..." style="border-radius: 295px;">
-                </div>
+                </div> -->
              </div>
          </div>
      </section>
